--- a/DFS&BFS.html
+++ b/DFS&BFS.html
@@ -52,6 +52,7 @@ const deepTraversal1 = node => {
 }
 // 2、循环
 // 栈实现，循环中做的是push => pop => push => pop
+// 也就是迭代的方式
 const deepTraversal2 = (node) => {
     let stack = [];
     let nodes = [];
@@ -78,6 +79,7 @@ const node = document.getElementsByClassName('parent')[0];
 
 // 广度优先
 // 队列实现， 循环中做的是push => shift => push => shift
+// 也就是迭代的方式
 const widthTraversal = node => {
     let queue = [];
     let nodes = [];
@@ -103,4 +105,65 @@ const widthTraversal = node => {
 console.log('deepTraversal1>>', deepTraversal1(node));
 console.log('deepTraversal2>>', deepTraversal2(node));
 console.log('widthTraversal>>>', widthTraversal(node));
+
+// 二叉树遍历
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val) {
+ *     this.val = val;
+ *     this.left = this.right = null;
+ * }
+ */
+// 1、递归
+const preorderTraversal = (root) => {
+    const result = [];
+    if (root) {
+        // 前序遍历
+        result.push(root.val);
+        result.push.apply(result, preorderTraversal(root.left));
+        result.push.apply(result, preorderTraversal(root.right));
+        // // 中序遍历
+        // result.push.apply(result, preorderTraversal(root.left));
+        // result.push(root.val);
+        // result.push.apply(result, preorderTraversal(root.right));
+        // // 后序遍历
+        // result.push.apply(result, preorderTraversal(root.left));
+        // result.push.apply(result, preorderTraversal(root.right));
+        // result.push(root.val);
+    }
+    return result;
+}
+// 2、迭代--广度优先： 队列
+const preorderTraversal = (root) => {
+    let queue = [];
+    let result = [];
+    if (root) {
+        queue.push(root)
+        while (queue.length) {
+            let item = queue.shift();
+            result.push(item.val);
+            if (item.left) queue.push(item.left);
+            if (item.right) queue.push(item.right);
+        }
+    }
+    return result;
+}
+
+// 3、迭代--深度优先： 栈
+const preorderTraversal = (root) => {
+    const stack = [];
+    const result = [];
+
+    if (root) {
+        stack.push(root);
+        while (stack.length) {
+            let item = stack.pop();
+            result.push(item.val);
+            // 倒序 push，后 push 的先 pop，即实现前序遍历 L=>D=>R
+            if (item.right) stack.push(item.right);
+            if (item.left) stack.push(item.left);
+        }
+    }
+    return result;
+}
 </script>
