fix: bind impl add prototype

--- a/DFS&BFS.html
+++ b/DFS&BFS.html
@@ -114,7 +114,7 @@ console.log('widthTraversal>>>', widthTraversal(node));
  *     this.left = this.right = null;
  * }
  */
-// 1、递归
+// 1、递归--深度优先
 const preorderTraversal = (root) => {
     const result = [];
     if (root) {
