--- a/DFS&BFS.html
+++ b/DFS&BFS.html
@@ -133,7 +133,7 @@ const preorderTraversal = (root) => {
     }
     return result;
 }
-// 2、迭代--广度优先： 队列
+// 2、迭代--广度优先： 队列 前序遍历
 const preorderTraversal = (root) => {
     let queue = [];
     let result = [];
@@ -149,7 +149,7 @@ const preorderTraversal = (root) => {
     return result;
 }
 
-// 3、迭代--深度优先： 栈
+// 3、迭代--深度优先： 栈 前序遍历
 const preorderTraversal = (root) => {
     const stack = [];
     const result = [];
@@ -165,5 +165,42 @@ const preorderTraversal = (root) => {
         }
     }
     return result;
+}
+// 4、迭代--后序遍历：栈
+// res =>  左 - 右 - 根
+// 出 stack 顺序 => 根 - 左 - 右
+const preorderTraversal = (root) => {
+    const stack = []
+    const res = []
+    if (root) {
+        stack.push(root)
+        while (stack.length) {
+            let cur = stack.pop()
+            res.unshift(cur.val)
+            if (cur.left) stack.push(cur.left)
+            if (cur.right) stack.push(cur.right)
+        }
+    }
+}
+// 5、迭代--中序遍历
+// res => 左 - 中 - 右
+
+const preorderTraversal = (root) => {
+    const stack = []
+    const res = []
+    let cur = root
+    while (cur || stack.length) {
+        // 内层 while 一直找左孩子
+        while (cur) {
+            stack.push(cur)
+            cur = cur.left
+        }
+        // 取最左的孩子
+        cur = stack.pop()
+        res.push(cur.val)
+        // 尝试读取 cur 的右孩子
+        cur = cur.right
+    }
+    return res
 }
 </script>
